2017-01-24  Miguel Gomez  <magomez@igalia.com>

        [Coordinated Graphics] Ensure that we're in AC mode before trying to create GraphicsLayers
        https://bugs.webkit.org/show_bug.cgi?id=167365

        Reviewed by Carlos Garcia Campos.

        When entering AC on demand, the RenderLayerCompositor wants to create the root GraphicsLayer before the
        AcceleratedDrawingArea is in AC mode. This means there's no LayerTreeHost to request the GraphicsLayerFactory,
        so no layers are created. Ensure that we are in AC mode before requesting the GraphicsLayerFactory.

        No behaviour change, no new tests.

        * WebProcess/WebPage/AcceleratedDrawingArea.cpp:
        (WebKit::AcceleratedDrawingArea::graphicsLayerFactory):

2017-01-23  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Add API to WebKitWebsiteDataManager to handle website data
        https://bugs.webkit.org/show_bug.cgi?id=146589

        Reviewed by Michael Catanzaro.

        Add WebKitWebsiteData boxed type to wrap a WebsiteDataRecord and new methods to WebKitWebsiteDataManager to
        fetch, remove and clear website data.

        * PlatformGTK.cmake: Add new files to compilation.
        * UIProcess/API/gtk/WebKitWebsiteData.cpp: Added.
        (_WebKitWebsiteData::_WebKitWebsiteData):
        (recordContainsSupportedDataTypes): Helper function to check if the WebsiteDataRecord contains any type exposed
        by our API.
        (toWebKitWebsiteDataTypes): Convert from WebKit::WebsiteDataType to the GTK+ public API types.
        (webkitWebsiteDataCreate): Create a new WebKitWebsiteData for the given WebsiteDataRecord if it contains any
        supported type.
        (webkitWebsiteDataGetRecord): Returns the wrapped WebsiteDataRecord.
        (webkit_website_data_ref):
        (webkit_website_data_unref):
        (webkit_website_data_get_name): Return the display name.
        (webkit_website_data_get_types): Returns the mask of types.