@@ -1,3 +1,15 @@
+2017-01-23  Anders Carlsson  <andersca@apple.com>
+
+        The Score Esports crashes on launch
+        https://bugs.webkit.org/show_bug.cgi?id=167338
+        rdar://problem/29948645
+
+        Reviewed by Dan Bernstein.
+
+        * TestWebKitAPI/Tests/WebKit2Cocoa/WKObject.mm:
+        (TestWebKitAPI::TEST):
+        Add a test.
+
 2017-01-23  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK] Add API to WebKitWebsiteDataManager to handle website data
